# linuxwacom

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README  README.solaris  README.solaris.md  THIRDPARTYLICENSEREADME.txt  configure.in  solaris-build.sh
src/: .gitignore  Makefile.am  evdev.c  hid-core.c  hid-input.c  input.c  mousedev.c  tabletdev.c  usbmouse.c  wacom.4x  wacom.c  xsetwacom.4x
src/2.4/: evdev.c  hid-core.c  hid-input.c  input.c  mousedev.c  usbmouse.c  wacom.c
src/2.4.22/: evdev.c  hid-core.c  mousedev.c  wacom.c
src/2.4.30x86-64/: evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6/: usbmouse.c
src/2.6.10/: usbmouse.c
src/2.6.11/: usbmouse.c
src/2.6.13/: usbmouse.c
src/2.6.14/: usbmouse.c
src/2.6.16/: wacom.h  wacom_sys.c  wacom_wac.c  wacom_wac.h
src/2.6.18/: wacom.h
src/2.6.2/: usbmouse.c
src/2.6.24/: Makefile.in  wacom.h  wacom_sys.c
src/2.6.26/: wacom.h  wacom_sys.c
src/2.6.27/: wacom.h  wacom_sys.c  wacom_wac.c  wacom_wac.h
src/2.6.3/: usbmouse.c
src/2.6.30/: wacom.h  wacom_sys.c  wacom_wac.c  wacom_wac.h
src/2.6.4/: usbmouse.c
src/2.6.5/: usbmouse.c
src/2.6.6/: usbmouse.c
src/2.6.7/: usbmouse.c
src/2.6.8/: usbmouse.c
src/2.6.9/: usbmouse.c
src/include/: .gitignore  Xwacom.h  input.h  usbwcm_build.h  util-config.h.in  wcmSolaris.h  xdrv-config.h.in
src/solaris/: Makefile  wacom.c  wacom.h  wacomtest.c
src/util/: .gitignore  10-linuxwacom.fdi  60-wacom.rules  Makefile.am  hal-setup-wacom.c  wacdump.c  wacomcfg.c  wacomcfg.h  wacomconfd.c  wacomxrrd.c  wacscrn.c  wactablet.c  wactablet.h  (+5 more)
(+27 files in other folders)
